apps/argocd/route-208.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argocd-208
  namespace: openshift-gitops
  annotations:
    # NOTE: destinationCACertificate is applied at deploy time from
    # the openshift-service-serving-signer CA. See the cluster's
    # service-ca configmap for the current cert.
spec:
  host: argocd.${INTERNAL_DOMAIN}
  to:
    kind: Service
    name: openshift-gitops-server
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
